@@ -124,6 +124,7 @@ $cms->theme->assign(array(
 	'form'		=> $form->values(),
 	'form_key'	=> '', //$ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
 	'lastupdate'	=> $ps->get_lastupdate(),
+	'season'		=> null,
 	'season_c'		=> null,
 	'division'		=> $division,
 	'wildcard'		=> $wildcard,
