@@ -55,6 +55,7 @@ if (empty($results)) {
 		'lastupdate'	=> $ps->get_lastupdate(),
 		'division'		=> null,
 		'wildcard'		=> null,
+		'season'		=> null,
 		'season_c'		=> null,
 		'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
 		'cookieconsent'	=> $cookieconsent,
@@ -126,6 +127,7 @@ if ($submit and !isset($message)) {
 			'username'		=> $userinfo['username'],
 			'team_id_label' => $team_id_label,
 			'lastupdate'	=> $lastupdate,
+			'season'		=> null,
 			'season_c'		=> null,
 			'division'		=> $division,
 			'wildcard'		=> $wildcard,
@@ -151,6 +153,7 @@ if (isset($message)) {
 		'lastupdate'	=> $ps->get_lastupdate(),
 		'division'		=> null,
 		'wildcard'		=> null,
+		'season'		=> null,
 		'season_c'		=> null,
 		'cookieconsent'	=> $cookieconsent,
 	));
@@ -163,6 +166,7 @@ $cms->theme->assign(array(
 	'form'		=> $form->values(),
 	'team_id_label' => $team_id_label,
 	'lastupdate'	=> $lastupdate,
+	'season'		=> null,
 	'season_c'		=> null,
 	'division'		=> $division,
 	'wildcard'		=> $wildcard,
