@@ -55,6 +55,7 @@ if (empty($results)) {
 		'lastupdate'	=> $ps->get_lastupdate(),
 		'division'		=> null,
 		'wildcard'		=> null,
+		'season'		=> null,
 		'season_c'		=> null,
 		'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
 		'cookieconsent'	=> $cookieconsent,
@@ -91,6 +92,7 @@ if ($submit) {
 			'lastupdate'	=> $ps->get_lastupdate(),
 			'division'		=> null,
 			'wildcard'		=> null,
+			'season'		=> null,
 			'season_c'		=> null,
 			'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
 			'cookieconsent'	=> $cookieconsent,
@@ -165,6 +167,7 @@ if ($submit) {
 				'team'	=> $team,
 				'reg'	=> $userinfo,
 				'lastupdate'	=> $lastupdate,
+				'season'		=> null,
 				'season_c'		=> null,
 				'division'		=> $division,
 				'wildcard'		=> $wildcard,
@@ -224,6 +227,7 @@ $cms->theme->assign(array(
 	'form'		=> $form->values(),
 	'team_id_label' => $team_id_label,
 	'lastupdate'	=> $lastupdate,
+	'season'		=> null,
 	'season_c'		=> null,
 	'division'		=> $division,
 	'wildcard'		=> $wildcard,
