@@ -20,7 +20,7 @@
 			<input id='q-hdr' type="text" name="q" value="{if $results}{$results.phrase|escape}{else}{$q|escape}{/if}" class="field search" maxlength="50">
 			<input name="sort" value="{$sort|escape}" type="hidden">
 			<input name="order" value="{$order|escape}" type="hidden">
-			<a href="index.php" title="<#Clear Search#>" alt="<#Clear Search#>"><img id="ps-search-clear" src="{theme->url}/img/icons/turd.gif"></a>
+			<a href="index.php{if $season}?season={$season}{/if}" title="<#Clear Search#>" alt="<#Clear Search#>"><img id="ps-search-clear" src="{theme->url}/img/icons/turd.gif"></a>
 {*
 			<input type="image" src="{theme->url}/img/icons/bullet_go.gif" style="vertical-align: middle">
 *}
