@@ -66,6 +66,7 @@ if (empty($results)) {
 		'lastupdate'	=> $ps->get_lastupdate(),
 		'division'		=> null,
 		'wildcard'		=> null,
+		'season'		=> null,
 		'season_c'		=> null,
 		'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
 		'cookieconsent'	=> $cookieconsent,
@@ -191,6 +192,7 @@ $cms->theme->assign(array(
 	'theme_list'	=> $cms->theme->get_theme_list(),
 	'language'	=> $cms->theme->language,
 	'lastupdate'	=> $ps->get_lastupdate(),
+	'season'		=> null,
 	'season_c'		=> null,
 	'division'		=> $division,
 	'wildcard'		=> $wildcard,
